# ocean_surface_levels

./: .gitignore  CLAUDE.md  LICENSE  README.md  dvc.yaml  pyproject.toml  readme.md
config/: base.yml
data/processed/: .gitignore
data/raw/: .gitignore
notebooks/: ameda-center-visualization.ipynb  ameda-detection-fields.ipynb  ameda-explore-rossby.ipynb  dataset-size.ipynb  explore-dataset.ipynb  notebook.ipynb
osl/: data.py  dtypes.py  torch_utils.py  trackers.py  utils.py
osl/ameda/: eddy_centers.py  fields.py  load_fields.py  params.py  rossby.py  utils.py
osl/core/: pytorch.py  trackers.py  train.py  utils.py
osl/model/: __init__.py  afno.py  convlstm.py  iam4vp.py  registry.py  resunet.py  segformer.py  simvp.py  vivit.py
reports/: .gitignore
scripts/: aggregate.py  download.py  download_data.py  dump_seasurface_heights.py  model_train.py  plot_nf.py  plot_preds.py  plot_video.py  split.py  train_dyffison.py  train_nextframe.py
