[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "osl"
version = "0.0.1"
description = "Approximations of ocean surface currents using satellite data"
authors = [
  { name = "Gianluca Calò" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11"
dependencies = [
    "copernicusmarine>=2.0.1",
    "einops>=0.8.1",
    "matplotlib>=3.10.1",
    "multidict==6.4.1",
    "netcdf4>=1.7.2",
    "numpy>=2.2.4",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.6.1",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "xarray>=2025.3.1",
    "zarr>=2.18.5",
]

[project.optional-dependencies]
wandb = [
    "wandb>=0.19.8",
]

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known-first-party = ["osl"]
force-sort-within-sections = true

[dependency-groups]
dev = [
    "dvc>=3.59.1",
    "dvc-s3>=3.2.0",
]
